--- a/register.html
+++ b/register.html
@@ -28,7 +28,7 @@
     <h1>Cards365</h1>
   </div>
   <div>
-    <form id="basic-form" action="index.html" method="post">
+    <form id="basic-form" action="#">
         <p>
           <label for="name">Name</label>
           <input id="name" name="name">
