--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <h1>Cards365</h1>
   </div>
   <div>
-    <la><a href="register.html">Register</a></la>
+    <div id="la"><a href="register.html">Register</a></div>
   </div>
   <div>
   <button class="activater" onclick="myFunction()">Log In</button>    
