--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
   <div>
     <ul>
       <li><a class="active" href="index.html">Home</a></li>
-      <li><a href="About Us.html">About Us</a></li>
-      <li><a href="Contact Us.html">Contact Us</a></li>
+      <li><a href="About_Us.html">About Us</a></li>
+      <li><a href="Contact_Us.html">Contact Us</a></li>
       <li><a href="Games.html">Games</a></li>      
     </ul>        
   </div>
