Changed method post to action #

--- a/Contact_Us.html
+++ b/Contact_Us.html
@@ -27,7 +27,7 @@
         <h2>Get in Touch with US & don't hesitate to reach out. 
             <br>			 
             Just fill the Contact form below.</h2>
-        <form action="mailto:armando.mirabella.e22538@mcast.edu.mt?subject=Regarding Cards365" method="post" enctype="text/plain">
+        <form action="mailto:armando.mirabella.e22538@mcast.edu.mt?subject=Regarding Cards365" action="#" enctype="text/plain">
         <label for="fname">Name</label>
         <input type="text" id="fname" name="firstname">
     
