--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
   <!-- The slideshow/carousel -->
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="Carousel Images/Cards 1.jpg" alt="Playing Cards and Nuts" class="d-block w-100">
+      <img src="Carousel_Images/Cards_1.jpg" alt="Playing Cards and Nuts" class="d-block w-100">
     </div>
     <div class="carousel-item">
-      <img src="Carousel Images/Cards 2.jpg" alt="Roulette and Casino-Chips" class="d-block w-100">
+      <img src="Carousel_Images/Cards_2.jpg" alt="Roulette and Casino-Chips" class="d-block w-100">
     </div>
     <div class="carousel-item">
-      <img src="Carousel Images/Cards 3.jpg" alt="Best Online Casino" class="d-block w-100">
+      <img src="Carousel_Images/Cards_3.jpg" alt="Best Online Casino" class="d-block w-100">
     </div>
   </div>
 
