Remove spacing and added _ instead

--- a/Game Background Image 4.html
+++ b/Game Background Image 4.html
@@ -22,7 +22,7 @@
     <h1>Cards365</h1>
   </div>  
   <div>
-<img src="Games Related Images/European Blackjack Gold.png" alt="European Blackjack Gold" style="width:100vw; height:100vh">
+<img src="Games_Related_Images/European Blackjack Gold.png" alt="European Blackjack Gold" style="width:100vw; height:100vh">
   </div>
   
 </body>
