--- a/Games.html
+++ b/Games.html
@@ -23,43 +23,43 @@
     <h1>Cards365</h1>
   </div>  
   <div class="overlay">    
-    <img src="Games Images/Game 1.png" alt="Mississippi Stud" class="image" style="width:100%">
+    <img src="Games_Images/Game 1.png" alt="Mississippi Stud" class="image" style="width:100%">
     <div class="middle">
       <button class="text" onclick="window.open('Game Background Image 1.html')">Try Game</button>
     </div>
   </div>
   <div class="overlay">
-    <img src="Games Images/Game 2.png" alt="Aces and Eights" class="image" style="width:100%">
+    <img src="Games_Images/Game 2.png" alt="Aces and Eights" class="image" style="width:100%">
     <div class="middle">
       <button class="text" onclick="window.open('Game Background Image 2.html')">Try Game</button>
     </div>
   </div>
   <div class="overlay">
-    <img src="Games Images/Game 3.png" alt="Jacks or Better" class="image" style="width:100%">
+    <img src="Games_Images/Game 3.png" alt="Jacks or Better" class="image" style="width:100%">
     <div class="middle">
       <button class="text" onclick="window.open('Game Background Image 3.html')">Try Game</button>
     </div>
   </div>
   <div class="overlay">
-    <img src="Games Images/Game 4.png" alt="European Blackjack Gold" class="image" style="width:100%">
+    <img src="Games_Images/Game 4.png" alt="European Blackjack Gold" class="image" style="width:100%">
     <div class="middle">
       <button class="text" onclick="window.open('Game Background Image 4.html')">Try Game</button>
     </div>
   </div>
   <div class="overlay">
-    <img src="Games Images/Game 5.png" alt="Classic Blackjack Gold" class="image" style="width:100%">
+    <img src="Games_Images/Game 5.png" alt="Classic Blackjack Gold" class="image" style="width:100%">
     <div class="middle">
       <button class="text" onclick="window.open('Game Background Image 5.html')">Try Game</button>
     </div>
   </div>
   <div class="overlay">
-    <img src="Games Images/Game 6.png" alt="Blackjack Lucky Lucky" class="image" style="width:100%">
+    <img src="Games_Images/Game 6.png" alt="Blackjack Lucky Lucky" class="image" style="width:100%">
     <div class="middle">
       <button class="text" onclick="window.open('Game Background Image 6.html')">Try Game</button>
     </div>
   </div>
   <div class="overlay">
-    <img src="Games Images/Game 7.png" alt="Blackjack Perfect Pairs" class="image" style="width:100%">
+    <img src="Games_Images/Game 7.png" alt="Blackjack Perfect Pairs" class="image" style="width:100%">
     <div class="middle">
       <button class="text" onclick="window.open('Game Background Image 7.html')">Try Game</button>
     </div>
