--- a/Game Background Image 1.html
+++ b/Game Background Image 1.html
@@ -22,7 +22,7 @@
     <h1>Cards365</h1>
   </div>  
   <div>
-<img src="Games Related Images/Mississippi Stud.jpg" alt="Mississippi Stud" style="width:100vw; height:100vh">
+<img src="Games_Related_Images/Mississippi Stud.jpg" alt="Mississippi Stud" style="width:100vw; height:100vh">
   </div>
   
 </body>
