--- a/Game Background Image 2.html
+++ b/Game Background Image 2.html
@@ -22,7 +22,7 @@
     <h1>Cards365</h1>
   </div>  
   <div>
-<img src="Games Related Images/Aces and Eights.jpg" alt="Aces and Eights" style="width:100vw; height:100vh">
+<img src="Games_Related_Images/Aces and Eights.jpg" alt="Aces and Eights" style="width:100vw; height:100vh">
   </div>
   
 </body>
