--- a/Game Background Image 3.html
+++ b/Game Background Image 3.html
@@ -22,7 +22,7 @@
     <h1>Cards365</h1>
   </div>  
   <div>
-<img src="Games Related Images/Jacks or Better.png" alt="Jacks or Better" style="width:100vw; height:100vh">
+<img src="Games_Related_Images/Jacks or Better.png" alt="Jacks or Better" style="width:100vw; height:100vh">
   </div>
   
 </body>
