--- a/Game Background Image 5.html
+++ b/Game Background Image 5.html
@@ -22,7 +22,7 @@
     <h1>Cards365</h1>
   </div>  
   <div>
-<img src="Games Related Images/Classic Blackjack Gold.png" alt="Classic Blackjack Gold" style="width:100vw; height:100vh">
+<img src="Games_Related_Images/Classic Blackjack Gold.png" alt="Classic Blackjack Gold" style="width:100vw; height:100vh">
   </div>
   
 </body>
