--- a/Game Background Image 6.html
+++ b/Game Background Image 6.html
@@ -22,7 +22,7 @@
     <h1>Cards365</h1>
   </div>  
   <div>
-<img src="Games Related Images/Blackjack Lucky Lucky.png" alt="Blackjack Lucky Lucky" style="width:100vw; height:100vh">
+<img src="Games_Related_Images/Blackjack Lucky Lucky.png" alt="Blackjack Lucky Lucky" style="width:100vw; height:100vh">
   </div>
   
 </body>
